Added fetchInfo button & well for info display

--- a/Plunker/Views/view1.html
+++ b/Plunker/Views/view1.html
@@ -2,3 +2,7 @@
 <p>{{welcome}} - {{response}}</p>
 <p>{{anthem}}</p>
 <p>{{gender}}</p>
+
+<button class="btn btn-success" data-ng-click="fetchInfo()">Fetch from Local Storage</button>
+
+<div class="well">{{fetch}}</div>
